[project]
name = "fantasy-pitchers"
version = "0.1.0"
description = "Fantasy baseball pitcher planner with rankings and live scores"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "mlb-statsapi>=1.7.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "pybaseball>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlb", "routes", "services"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
